# HW5

./: CMakeLists.txt  HW5.c  README.md
